<resources>
    <string name="app_name">Unit Converter</string>
    <string name="torque">Torque</string>
    <string name="todo1">TODO</string>
    <string name="area">Area</string>
    <string name="todo">TODO</string>
    <string name="from">From</string>
    <string name="celcius">Celcius</string>
    <string name="to">To</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="select_unit">Select Unit</string>
    <string name="todo12">TODO</string>
    <string name="select_unit1">Select Unit</string>
    <string name="todo13">TODO</string>
    <string name="convert">Convert</string>
    <string name="todo14">TODO</string>
    <string name="current">Current</string>
    <string name="todo15">TODO</string>
    <string name="from1">From</string>
    <string name="celcius1">Celcius</string>
    <string name="to1">To</string>
    <string name="fahrenheit1">Fahrenheit</string>
    <string name="select_unit12">Select Unit</string>
    <string name="todo151">TODO</string>
    <string name="select_unit32">Select Unit</string>
    <string name="convert11">Convert</string>
    <string name="todo144">TODO</string>
    <string name="todo43">TODO</string>
    <string name="power12">Power</string>
    <string name="todo00">TODO</string>
    <string name="resistence">Resistence</string>
    <string name="todo88">TODO</string>
    <string name="force">Force</string>
    <string name="todo889">TODO</string>
    <string name="current55">Current</string>
    <string name="todo009">TODO</string>
    <string name="storage">Storage</string>
    <string name="todo90">TODO</string>
    <string name="energy">Energy</string>
    <string name="todo131">TODO</string>
    <string name="pressure">Pressure</string>
    <string name="todo1311">TODO</string>
    <string name="fuel">Fuel</string>
    <string name="todo555">TODO</string>
    <string name="area44">Area</string>
    <string name="todo898">TODO</string>
    <string name="time">Time</string>
    <string name="todo77">TODO</string>
    <string name="volume">Volume</string>
    <string name="todo8800">TODO</string>
    <string name="frequency">Frequency</string>
    <string name="todo665">TODO</string>
    <string name="speed">Speed</string>
    <string name="todo788">TODO</string>
    <string name="length">Length</string>
    <string name="todo6543">TODO</string>
    <string name="weight">Weight</string>
    <string name="todo234">TODO</string>
    <string name="todo45">TODO</string>
    <string name="temperature">Temperature</string>
    <string name="virat_gupta">Virat GUpta</string>
    <string name="unit_converter">Unit Converter</string>
    <string name="todo3456">TODO</string>
    <string name="convert123">Convert</string>
    <string name="select_unit23">Select Unit</string>
    <string name="todo67">TODO</string>
    <string name="select_unit678">Select Unit</string>
    <string name="todo2349">TODO</string>
    <string name="fahrenheit45">Fahrenheit</string>
    <string name="to900">To</string>
    <string name="celcius78">Celcius</string>
    <string name="fronn">From</string>
    <string name="todo89">TODO</string>
    <string name="power">Power</string>
    <string name="convert345">Convert</string>
    <string name="select_unit345">Select Unit</string>
    <string name="select_unit45">Select Unit</string>
    <string name="todo88000">TODO</string>
    <string name="todo456">TODO</string>
    <string name="todo4567">TODO</string>
    <string name="fahrenheit67">Fahrenheit</string>
    <string name="to89">To</string>
    <string name="celcius90">Celcius</string>
    <string name="i">From</string>
    <string name="length67">Length</string>
    <string name="todo7890">TODO</string>
    <string name="fuel111">Fuel</string>
    <string name="todo345690">TODO</string>
    <string name="from5678">From</string>
    <string name="celcius87">Celcius</string>
    <string name="to77">To</string>
    <string name="fahrenheit456">Fahrenheit</string>
    <string name="select_unit111">Select Unit</string>
    <string name="todo11">TODO</string>
    <string name="select_unit1111">Select Unit</string>
    <string name="todo654">TODO</string>
    <string name="convert111">Convert</string>
    <string name="todo23333">TODO</string>
    <string name="convert121">Convert</string>
    <string name="todo12321">TODO</string>
    <string name="select_unit432">Select Unit</string>
    <string name="todo54">TODO</string>
    <string name="select_unit231">Select Unit</string>
    <string name="todo876">TODO</string>
    <string name="f990">Fahrenheit</string>
    <string name="to11">To</string>
    <string name="celcius23">Celcius</string>
    <string name="from4567">From</string>
    <string name="frequency123">Frequency</string>
    <string name="todo233">TODO</string>
    <string name="convert12111">Convert</string>
    <string name="todo1111">TODO</string>
    <string name="select_unit121">Select Unit</string>
    <string name="todo123">TODO</string>
    <string name="select_unit234">Select Unit</string>
    <string name="todo7657">TODO</string>
    <string name="fahrenheit12">Fahrenheit</string>
    <string name="to234">To</string>
    <string name="celcius56">Celcius</string>
    <string name="from56">From</string>
    <string name="todo334">TODO</string>
    <string name="force45">Force</string>
    <string name="convert22">Convert</string>
    <string name="todo22">TODO</string>
    <string name="select_unit22">Select Unit</string>
    <string name="todo222">TODO</string>
    <string name="select_unit222">Select Unit</string>
    <string name="todo2222">TODO</string>
    <string name="fahrenheit22">Fahrenheit</string>
    <string name="to22">To</string>
    <string name="celcius22">Celcius</string>
    <string name="from2222">From</string>
    <string name="energy543">Energy</string>
    <string name="todo0099">TODO</string>
    <string name="pressure88">Pressure</string>
    <string name="todoii0">TODO</string>
    <string name="todo5555">TODO</string>
    <string name="convert555">Convert</string>
    <string name="todo7777">TODO</string>
    <string name="select_unit5588">Select Unit</string>
    <string name="select_unit634">Select Unit</string>
    <string name="todo66">TODO</string>
    <string name="to222">To</string>
    <string name="celcius245">Celcius</string>
    <string name="fahrenheit55">Fahrenheit</string>
    <string name="from55">From</string>
    <string name="resistance">Resistance</string>
    <string name="todo2331">TODO</string>
    <string name="from778">From</string>
    <string name="celcius8">Celcius</string>
    <string name="to5">To</string>
    <string name="fahrenheit77">Fahrenheit</string>
    <string name="select_unit55">Select Unit</string>
    <string name="todo670">TODO</string>
    <string name="select_unit69">Select Unit</string>
    <string name="celcius7890">Celcius</string>
    <string name="select_unit6788">Select Unit</string>
    <string name="todo121">TODO</string>
    <string name="celcius878">Celcius</string>
    <string name="celcius2345">Celcius</string>
    <string name="celcius345">Celcius</string>
    <string name="celcius7780099">Celcius</string>
    <string name="celcius556">Celcius</string>
    <string name="celcius8787">Celcius</string>
</resources>