<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/temp_relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".length_cal">

    <LinearLayout
        android:id="@+id/ll_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="#9770B6"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <TextView
            android:id="@+id/tv_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:layout_marginTop="40dp"
            android:text="@string/length67"
            android:textColor="@color/textColor"
            android:textSize="24sp" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="40dp"
            android:contentDescription="@string/todo7890"
            android:src="@drawable/length" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/editTextLinearLayout"
        android:layout_width="match_parent"
        android:layout_below="@id/ll_heading"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:weightSum="2"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#9770B6"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_fromUnit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/bg_rounded_input_field"
                android:hint="@string/from"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:padding="12dp"
                android:textColor="@color/textColor"
                android:textColorHint="@color/hintColor"
                android:textCursorDrawable="@null" />

            <TextView
                android:id="@+id/tv_fromUnit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/celcius90"
                android:textAlignment="center"
                android:textColor="@color/textColor"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#9770B6"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_toUnit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/bg_rounded_input_field"
                android:enabled="false"
                android:hint="@string/to89"
                android:importantForAutofill="no"
                android:inputType="none"
                android:padding="12dp"
                android:textColor="@color/textColor"
                android:textColorHint="@color/hintColor"
                android:textCursorDrawable="@null" />

            <TextView
                android:id="@+id/tv_toUnit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fahrenheit67"
                android:textAlignment="center"
                android:textColor="@color/textColor"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/listViewLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextLinearLayout"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <androidx.cardview.widget.CardView
            android:id="@+id/fromUnit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="12dp"
            android:layout_weight="1"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/selectunit"
                android:padding="4dp">

                <RelativeLayout
                    android:id="@+id/rl_fromUnit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:padding="8dp">

                    <TextView
                        android:id="@+id/tv2_fromUnit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="4dp"
                        android:text="@string/select_unit45"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="4dp"
                        android:layout_toEndOf="@id/tv2_fromUnit"
                        android:src="@drawable/down_arrow"
                        app:tint="@color/white"
                        android:contentDescription="@string/todo88000" />

                </RelativeLayout>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/toUnit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="24dp"
            android:layout_marginBottom="12dp"
            android:layout_weight="1"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/selectunit"
                android:padding="4dp">

                <RelativeLayout
                    android:id="@+id/rl_selectToUnit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:padding="8dp">

                    <TextView
                        android:id="@+id/tv2_toUnit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="4dp"
                        android:text="@string/select_unit345"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="4dp"
                        android:layout_toEndOf="@id/tv2_toUnit"
                        android:src="@drawable/down_arrow"
                        app:tint="@color/white"
                        android:contentDescription="@string/todo456" />

                </RelativeLayout>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_convert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/listViewLinearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/convertUnit"
            android:padding="8dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:padding="8dp">

                <TextView
                    android:id="@+id/btn_convert"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:text="@string/convert345"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
                
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="8dp"
                    android:layout_toEndOf="@id/btn_convert"
                    android:src="@drawable/convert"
                    android:contentDescription="@string/todo4567" />

            </RelativeLayout>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>


</RelativeLayout>